Begin to make Physic test

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="utf-8"/>
-    <title>My First Parcel App</title>
+    <title>Guess number Game</title>
     <script type="module" src="index.js"></script>
+    <style>
+      body {
+        overflow:hidden;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
-    <h1>Hello, World!</h1>
   </body>
 </html>
